2010-03-07  Tim Retout  <diocles@gnu.org>

	* src/gsint.h: Remove version_string and ps_version_string.
	* src/main.c: Likewise.
	* src/main.c (version): Update copyright and licensing
	information. Use autoconf variables instead of hardcoded strings.
	* src/main.c (usage): Add angle brackets around bug address.
	* src/psgen.c (dump_ps_header): Set ps_version_string here.

2010-03-06  Tim Retout  <diocles@gnu.org>

	* configure.ac: Set version to 1.6.5.1.

	* states/hl/Makefile.am (highlightings): Add f90.st.

	* INSTALL: Move enscript-specific details into README, and remove
	from the repository (i.e. just use the standard INSTALL file).
	* README: Replace all old web/mail addresses.

	* All Makefile.am files: Add ChangeLog.old to EXTRA_DIST.

2010-02-03  Tim Retout  <diocles@gnu.org>

	* All ChangeLog files in subdirectories have been renamed to
	ChangeLog.old.  All change log entries from 1.6.5 onwards will be
	made in this file.

2010-01-28  Tim Retout  <diocles@gnu.org>

	* docs/states.man (are): Fix typo of 'beginning'.
	* docs/enscript.man: Fix three misspellings of 'dependent'.

2010-01-25  Tim Retout  <diocles@gnu.org>

	* configure.ac: Set version to 1.6.5.

2009-12-31  Tim Retout  <diocles@gnu.org>

	* configure.ac: Set version to 1.6.4.91.

2009-12-27  Tim Retout  <diocles@gnu.org>

	* configure.ac: Set version to 1.6.4.90.
	* NEWS: Add noteworthy changes for 1.6.5, and a placeholder for
	1.6.4.

2009-01-13  Tim Retout  <diocles@gnu.org>

	* COPYING: Update to GPLv3
	* All files: Update license headers to GPLv3.

2008-02-03  Tim Retout  <diocles@gnu.org>

	* Makefile.am (EXTRA_DIST): Remove ABOUT-NLS, THANKS and config.rpath,
	because these will be distributed anyway.

	Remove autoconf-generated files.

	* configure: Remove from repository.

	Remove automake-generated files.

	* Makefile.in: Remove from repository.
	* afm/Makefile.in: Likewise.
	* afmlib/Makefile.in: Likewise.
	* afmlib/ansi2knr.1: Likewise.
	* afmlib/ansi2knr.c: Likewise.